code header footer

--- a/packages/web-client/src/sass/index.scss
+++ b/packages/web-client/src/sass/index.scss
@@ -1,3 +1,6 @@
-body{
-    color:red;
-}
+@import "./variables";
+@import "./mixins";
+@import "./base";
+
+@import "./components/header";
+@import "./components/footer";
