--- a/packages/web-client/src/sass/index.scss
+++ b/packages/web-client/src/sass/index.scss
@@ -4,3 +4,5 @@
 
 @import "./components/header";
 @import "./components/footer";
+@import "./components/button";
+@import "./components/hero-slider"
