--- a/packages/web-client/src/sass/index.scss
+++ b/packages/web-client/src/sass/index.scss
@@ -5,4 +5,7 @@
 @import "./components/header";
 @import "./components/footer";
 @import "./components/button";
-@import "./components/hero-slider"
+@import "./components/hero-slider";
+@import "./components/section";
+@import "./components/policy-card";
+@import "./components/product-card";
