--- a/packages/web-client/src/sass/index.scss
+++ b/packages/web-client/src/sass/index.scss
@@ -10,4 +10,5 @@
 @import "./components/policy-card";
 @import "./components/product-card";
 @import "./components/catalog";
-@import "./components/custom-checkbox"
+@import "./components/custom-checkbox";
+@import "./components/product";
