--- a/packages/web-client/src/components/user/Form/Login.css
+++ b/packages/web-client/src/components/user/Form/Login.css
@@ -10,14 +10,7 @@
     --form-max-width: 500px;
 }
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
-}
-
-body {
+.container-login {
     font-family: "Source Sans Pro", sans-serif;
     height: 100vh;
     position: relative;
