--- a/packages/web-client/src/components/user/Cart/Cart.css
+++ b/packages/web-client/src/components/user/Cart/Cart.css
@@ -100,6 +100,9 @@
 
 .select-color{
     padding: 5px;
+    border-radius: 2px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+    color: #555;
 }
 
 .check-item-left input {
