--- a/packages/web-client/src/components/user/Cart/Cart.css
+++ b/packages/web-client/src/components/user/Cart/Cart.css
@@ -4,6 +4,11 @@
   display: grid;
   grid-template-columns:60% 40%;
   grid-gap: 0 10px;
+  height:100vh;
+}
+
+.cart-info{
+  overflow-y: auto;
 }
 
 .checkbox-wrap {
@@ -117,6 +122,10 @@
   margin-top: 10px;
 }
 
+.check-select{
+  display:flex;
+}
+
 .middle-color select {
   outline: none;
   border-radius: 3px;
@@ -125,7 +134,6 @@
 
 .check-item-left__img {
   width: 80px;
-  height: 80px;
   border: 1px solid rgb(194, 194, 194);
   border-radius: 5px;
   margin: 0 5px;
@@ -289,11 +297,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content:center;
     margin-right: 10px;
   }
 
   .middle-color select {
-    width: 75px;
+    width: auto;
     font-size: 15px;
   }
 
