--- a/packages/web-client/src/sass/components/_header.scss
+++ b/packages/web-client/src/sass/components/_header.scss
@@ -78,10 +78,24 @@
             font-size: 2.25rem;
 
             &__item {
+                position: relative;
                 @include flex(center, center);
 
                 @include tablet {
                     margin-left: 10px;
+                }
+
+                &__shopping-bag {
+                    position: absolute;
+                    top: -5px;
+                    right: -15px;
+                    width: 20px;
+                    text-align: center;
+                    background: #4267b2;
+                    border-radius: 50%;
+                    font-size: 1.5rem;
+                    color: #fff;
+                    font-weight: bold;
                 }
             }
 
